# optick-rs

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  generate_bindings.bat  generate_bindings.sh
.github/workflows/: CI.yml
examples/: fibonacci.rs  gameloop.rs
src/: lib.rs  optick_api.rs
