[package]
name = "optick"
version = "1.3.1"
authors = ["Vadim Slyusarev <vadim@optick.dev>"]
edition = "2018"
description = "Super Lightweight Performance Profiler"
repository = "https://github.com/bombomby/optick-rs"
keywords = ["profiler", "performance", "optick"]
categories = ["development-tools::profiling", "api-bindings"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false
#crate-type = ["dylib"]

[features]
default = ["enable"]
enable = []